--- a/src/styles.css
+++ b/src/styles.css
@@ -311,3 +311,19 @@ li a:hover {
 .workout-details-container .cardio-details {
   font-style: italic;
 }
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 0px;
+}
+
+.my-button {
+  margin-bottom: 20px !important;
+  padding-bottom: 100px;
+}
